force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__ActualDurationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualDurationNumber__c</fullName>
    <label>Actual Duration</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualDurationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>