force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__ActualEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualEndDateTime__c</fullName>
    <label>Actual End DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>