force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__AdditionalInformationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdditionalInformationText__c</fullName>
    <label>Additional Information</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdditionalInformationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>