force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__AppointmentBundlePolicyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppointmentBundlePolicyId__c</fullName>
    <label>Appointment Bundle Policy</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppointmentBundlePolicyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>