force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__Comment__c.field-meta.xml
<CustomField>
    <fullName>ssot__Comment__c</fullName>
    <label>Comment</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Comment</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>