force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__IsBundleMember__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsBundleMember__c</fullName>
    <label>Is Bundle Member</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsBundleMember</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>