force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__IsFillInCandidate__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsFillInCandidate__c</fullName>
    <label>Is Fill In Candidate</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsFillInCandidate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>