force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__IsMultiDay__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsMultiDay__c</fullName>
    <label>Is MultiDay</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsMultiDay</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>