force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__IsUpdatedByOptimization__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsUpdatedByOptimization__c</fullName>
    <label>Is Updated By Optimization</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsUpdatedByOptimization</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>