force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__rel_1702009442908_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009442908_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceAppointment_AccountId_map_Acc_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ServiceAppointment_AccountId_map_Acc_rel</relationshipLabel>
    <relationshipName>rel_1702009442908_end</relationshipName>
    <type>Lookup</type>
</CustomField>