force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__rel_1702009444735_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009444735_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceAppointment_CreatedById_map_U_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ServiceAppointment_CreatedById_map_U_rel</relationshipLabel>
    <relationshipName>rel_1702009444735_end</relationshipName>
    <type>Lookup</type>
</CustomField>