force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__rel_1702009447679_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009447679_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceAppointment_ParentRecordId_ma_rel</label>
    <referenceTo>ssot__WorkOrderItem__dlm</referenceTo>
    <relationshipLabel>ServiceAppointment_ParentRecordId_ma_rel</relationshipLabel>
    <relationshipName>rel_1702009447679_end</relationshipName>
    <type>Lookup</type>
</CustomField>