force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__RelatedBundleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedBundleId__c</fullName>
    <label>Related Bundle</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedBundleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>