force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__ScheduledEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScheduledEndDateTime__c</fullName>
    <label>Scheduled End DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScheduledEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>