force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__ServiceAppointmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceAppointmentStatus__c</fullName>
    <label>Service Appointment Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceAppointmentStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>