force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__ServiceAppointmentStatusCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceAppointmentStatusCategory__c</fullName>
    <label>Service Appointment Status Category</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceAppointmentStatusCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>