force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__ServiceAppointmentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceAppointmentType__c</fullName>
    <label>Service Appointment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceAppointmentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>