force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__ServiceNoteText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceNoteText__c</fullName>
    <label>Service Note</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceNoteText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>