force-app/main/default/objects/ssot__ServiceAppointment__dlm/fields/ssot__ShouldScheduleOverLowerPriorityAppt__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShouldScheduleOverLowerPriorityAppt__c</fullName>
    <label>Schedule Over Lower Priority Appointment</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShouldScheduleOverLowerPriorityAppt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>